# PAKE

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client_noic.cpp  server.cpp  server_noic.cpp
include/: 2feistel.h  babai.h  common.h  hash.h  ideal_cipher.h  ideal_cipher_pake.h  int.h  kem.h  lpke.h  matrix.h  noic.h  ntt.h  ocake.h  pke.h  polynomial.h  polynomial_matrix.h  polynomial_matrix_utils.h  polynomial_traits.h  print.h  r.h  random.h  random_mgs.h  rom_pake.h  timerset.h  trapdoor_handler.h  trapgen.h  vector.h
src/: babai.cpp  hash.cpp  ideal_cipher.cpp  ideal_cipher_pake.cpp  int.cpp  kem.cpp  lpke.cpp  matrix.cpp  noic.cpp  ntt.cpp  pke.cpp  polynomial.cpp  polynomial_matrix.cpp  print.cpp  r.cpp  random.cpp  random_mgs.c  test.cpp  timerset.cpp  trapdoor_handler.cpp  trapgen.c  trapgen.cpp  vector.cpp
test/: CMakeLists.txt  babai.cpp  babai_eigen.cpp  babai_fplll.cpp  babai_ntl.cpp  invert.cpp  test.cpp  test.py  test_2feistel.cpp  test_bug.cpp  test_decode.cpp  test_fplll.cpp  test_ideal_cipher.cpp  test_karatsuba.cpp  test_kem.cpp  test_lpke.cpp  test_noic.cpp  test_pake.cpp  test_pke.cpp  test_polynomial.cpp  test_polynomial_matrix.cpp  test_rom_pake.cpp  test_rounding.cpp  test_trapdoor.cpp
